# fhe-egraphs

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  benchmark.sh  driver.py  egraphs25_benchmarks.py  esyn_result.txt  eval_all.sh  hd08.egg  hd08_cycles.egg  iwls25_benchmarks.py  launch_opt.sh  launch_verify.sh  opt_all.sh  out.egg  out.eqn  out0.egg  results.csv  run_abc.sh  verify_all.sh
bench/esop_optimized/: bar.eqn  cavlc.eqn  ctrl.eqn  dec.eqn  i2c.eqn  int2float.eqn  router.eqn
bench/esyn/: optimized_circuit0.eqn
bench/integer/: cardio.eqn  chisquared.eqn  euclidean_distance.eqn  logistic_regression.eqn  nn.eqn  sort-gf13.eqn
bench/iscas/: c1355.eqn  c17.eqn  c1908.eqn  c2670.eqn  c3540.eqn  c432.eqn  c499.eqn  c5315.eqn  c6288.eqn  c7552.eqn  c880.eqn
bench/jefco/: bar.eqn  cardio.eqn  cavlc.eqn  ctrl.eqn  dec.eqn  dsort.eqn  hd01.eqn  hd02.eqn  hd03.eqn  hd04.eqn  hd05.eqn  hd06.eqn  hd07.eqn  hd08.eqn  hd09.eqn  hd10.eqn  hd11.eqn  hd12.eqn  i2c.eqn  int2float.eqn  isort.eqn  osort.eqn  router.eqn
bench/lobster.opt_dac19/: bar.eqn  bsort.eqn  cardio.eqn  cavlc.eqn  ctrl.eqn  dec.eqn  dsort.eqn  hd01.eqn  hd02.eqn  hd03.eqn  hd04.eqn  hd05.eqn  hd06.eqn  hd07.eqn  hd08.eqn  hd09.eqn  hd10.eqn  hd11.eqn  hd12.eqn  i2c.eqn  int2float.eqn  isort.eqn  msort.eqn  osort.eqn  router.eqn
bench/lobster.opt_lobster/: bar.eqn  bsort.eqn  cardio.eqn  cavlc.eqn  ctrl.eqn  dsort.eqn  hd04.eqn  hd07.eqn  hd09.eqn  hd10.eqn  hd11.eqn  hd12.eqn  i2c.eqn  int2float.eqn  isort.eqn  msort.eqn  osort.eqn  router.eqn
bench/lobster.opt_mcmd/: bar.eqn  cardio.eqn  cavlc.eqn  ctrl.eqn  dec.eqn  dsort.eqn  hd01.eqn  hd02.eqn  hd03.eqn  hd04.eqn  hd05.eqn  hd06.eqn  hd07.eqn  hd08.eqn  hd09.eqn  hd10.eqn  hd11.eqn  hd12.eqn  i2c.eqn  int2float.eqn  msort.eqn  osort.eqn  router.eqn
bench/manual/: depth8_noshare.eqn  depth8_share.eqn  depth9.eqn  fa.eqn  hd03.eqn  test.eqn
bench/sexpr/: adder.sexpr  bar.sexpr  cardio.sexpr  cavlc.sexpr  ctrl.sexpr  dec.sexpr  hd01.sexpr  hd02.sexpr  hd03.sexpr  hd04.sexpr  hd05.sexpr  hd06.sexpr  hd07.sexpr  hd08.sexpr  hd09.sexpr  hd10.sexpr  hd11.sexpr  i2c.sexpr  int2float.sexpr  router.sexpr
ckt-convert/: Cargo.toml
ckt-convert/src/: dot.rs  eqn.rs  main.rs  parse.rs  rules.rs  stats.rs
eggtest/: Cargo.toml
eggtest/src/: global_greedy_dag.rs  main.rs
eqsat-opt/: Cargo.toml  egraph.dot  egraph_pruned.dot
eqsat-opt/src/: common.rs  extraction_ser.rs  extraction_unser.rs  global_greedy_dag.rs  global_greedy_dag.rs.1  main copy.rs  main.rs  main.rs,2  md_mc_balanced_extract.rs  md_slack.rs  serde.rs  traverse.rs
he-eval/: .gitignore  CMakeLists.txt  Makefile  README.md  circuit.cpp  circuit.hpp  eqn_driver.cpp  eqn_driver.hpp  eqn_lexer.l  eqn_parser.yy  eqn_scanner.hpp  main.cpp  regalloc.cpp  regalloc.hpp  utils.hpp
lobster_bench/: one.eqn
lobster_rules/: one_case
rules/: arith.rules  bool.rules  bool2.rules  comm.rules  esyn.rules  filter_ors.py
rules/lobster/: bar.rules  bsort.rules  cardio.rules  cavlc.rules  ctrl.rules  dsort.rules  hd01.rules  hd03.rules  hd04.rules  hd05.rules  hd07.rules  hd08.rules  hd09.rules  hd11.rules  hd12.rules  i2c.rules  int2float.rules  isort.rules  msort.rules  osort.rules  router.rules
rules/mcmd/: bar.rules  (+9 more)
scripts/: abc_report_all.sh  extract_unique_rules.py  launch_eval.sh  opt_dac19_base.sh  rule_occurence.py
(+41 files in other folders)
