[package]
name = "eqsat-opt"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = "0.6.3"
clap = { version = "4.5.32", features = ["derive"] }
#egg = { version = "0.9.5", features = ["lp"] }
egg = { path = "deps/egg" }
egraph-serialize = { path = "deps/egraph-serialize" }
env_logger = "0.11.5"
indexmap = "2.7.1"
indicatif = "0.17.11"
ordered-float = "3"
rand = "0.9.0"
rand_chacha = "0.9.0"
rpds = "1.1.0"
tempfile = "3.15.0"
